--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500;600;700;800;900&display=swap');
+
 
 :root {
 
@@ -13,7 +14,7 @@
 
   --color2: rgb(204, 160, 248);
   --color2_rgb: 204, 160, 248;
-  
+
   --color3: rgb(255, 204, 255);
   --color3_rgb: 255, 204, 255;
 
@@ -22,7 +23,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Dancing Script', Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Sansita Swashed', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
