--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap');
 
 
 :root {
@@ -23,7 +23,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: 'Sansita Swashed', sans-serif;
+  font-family: 'Oregano', cursive;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
