--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -60,6 +60,7 @@
                     border-radius: 50%;
                     width: 45%;
                     height: 100%;
+                    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
                 }
             }
 
