--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -19,58 +19,58 @@
             position: absolute;
             width: 200%;
             height: 100%;
-            animation: wave 10s -3s linear infinite;
+            animation: wave 10s linear infinite;
             transform: translate3d(0, 0, 0);
             opacity: 0.8;
         }
 
         .wave:nth-of-type(2) {
             bottom: 0;
-            animation: wave 18s linear reverse infinite;
+            animation: wave 8s linear reverse infinite;
             opacity: 0.5;
         }
-    
+
         .wave:nth-of-type(3) {
             bottom: 0;
-            animation: wave 20s -1s linear infinite;
+            animation: wave 5s -1s linear infinite;
             opacity: 0.5;
         }
-    
+
         @keyframes wave {
             0% {
-                transform: translateX(0);
+                transform: translateX(-10%);
             }
-    
+
             50% {
-                transform: translateX(-25%);
+                transform: translateX(0%);
             }
-    
+
             100% {
-                transform: translateX(-50%);
+                transform: translateX(-10%);
             }
         }
 
-        .time{
+        .time {
             width: 100%;
             display: flex;
             justify-content: space-around;
             align-items: center;
             text-align: center;
             color: #fff;
-            position: absolute;    
-            bottom: 0;    
+            position: absolute;
+            bottom: 0;
 
-            .item{
-                width: 100%;                
+            .item {
+                width: 100%;
                 display: flex;
-                flex-direction: column;                
+                flex-direction: column;
             }
 
-            
+
 
         }
 
-       
+
     }
 
 
@@ -78,16 +78,23 @@
 
 @media screen and (min-width: 992px) {
 
-    .countdown{
-        .ocean{
+    .countdown {
+        .ocean {
             height: 120px;
 
-            .time{
+            .time {
                 width: 75%;
+
+                .item {
+                    * {
+                        font-size: 18px;
+                    }
+                }
+
             }
 
         }
-       
+
     }
 
 }
