--- a/src/pages/summary/Summary.module.scss
+++ b/src/pages/summary/Summary.module.scss
@@ -1,5 +1,58 @@
-.summary{
+.summary {
     width: 100%;
-    padding: 16px;
+
+    .separator {
+        width: 100%;
+        height: 200px;
+        background: var(--color2);
+        position: relative;
+
+        .hello {
+            position: absolute;
+            color: #fff;
+            top: 58px;
+            left: 41%;
+            right: 50%;
+            transform: translate(-50%, -50%);
+            text-shadow: 5px 2px 3px var(--color1);
+            font-size: 54px;
+        }
+
+    }
+
+    .content {
+
+        position: relative;
+
+        .avatar {
+
+            width: 65%;
+            height: 200px;
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            right: 50%;
+            transform: translate(-50%, -50%);
+
+            .img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+            }
+        }
+
+        .card {
+            position: relative;
+            width: 100%;
+            justify-content: center;
+            margin-top: 150px;
+            display: inline-flex;
+
+        }
+
+
+
+    }
 
 }
