--- a/src/components/stars/Stars.scss
+++ b/src/components/stars/Stars.scss
@@ -6,9 +6,9 @@
 	pointer-events: none;
 }
 
-.fa-star {
+.star-icon{
 	position: absolute;
-	color: var(--color3);
+	color: var(--color1);
 	animation: animate 3s infinite;
 }
 
