--- a/src/pages/dedications/components/card-dedication/CardDedication.module.scss
+++ b/src/pages/dedications/components/card-dedication/CardDedication.module.scss
@@ -1,11 +1,10 @@
 .card {
 
     width: 350px;
-    height: 250px;
+    height: 450px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
     gap: 16px;
     padding: 16px;
@@ -17,10 +16,17 @@
         color: var(--primary);
     }
 
-    .text {
-        font-size: 18px;
-        color: var(--secondary);
-        text-align: center;
+    .content {
+        
+        max-height: 100%;
+        display: flex;
+        overflow-x: auto;       
+
+        .text {
+            font-size: 18px;            
+            color: var(--secondary);
+            text-align: center;
+        }
     }
 
     @keyframes cardDedicationAnimation {
@@ -37,4 +43,60 @@
         }
     }
 
+}
+
+@media screen and (min-width: 768px) {
+
+    .card{
+
+        .content{
+
+            .text{
+                font-size: 20px;
+            }
+
+        }
+
+    }
+    
+}
+
+@media screen and (min-width: 992px) {
+
+    .card{
+
+        .to{
+            font-size: 38px;
+        }
+
+        .content{
+
+            .text{
+                font-size: 22px;
+            }
+
+        }
+
+    }
+    
+}
+
+@media screen and (min-width: 1200px) {
+
+    .card{
+
+        .to{
+            font-size: 40px;
+        }
+
+        .content{
+
+            .text{
+                font-size: 24px;
+            }
+
+        }
+
+    }
+    
 }
