--- a/src/pages/places/components/place-item/PlaceItem.module.scss
+++ b/src/pages/places/components/place-item/PlaceItem.module.scss
@@ -1,42 +1,43 @@
-.place{
+.place {
     width: 300px;
     height: 400px;
     display: flex;
-    flex-direction: column;    
-    align-items: center; 
-    background-color: rgba( var(--color1_rgb) , 0.2);
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(var(--color1_rgb), 0.2);
     padding: 16px;
     gap: 8px;
     border-radius: 4px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     text-align: center;
 
-    .reason{
-        font-size: 24px;        
+    .reason {
+        font-size: 24px;
         letter-spacing: 4px;
+        text-shadow: 1px 1px 4px var(--primary);
     }
 
-    .time{
+    .time {
         font-size: 16px;
         color: var(--primary);
     }
 
-    .name{
+    .name {
         font-size: 18px;
         color: var(--secondary);
         letter-spacing: 2px;
     }
 
-    .address{
+    .address {
         font-size: 12px;
         color: var(--secondary);
     }
 
-    .imgContainer{
+    .imgContainer {
         width: 150px;
         height: 150px;
 
-        img{
+        img {
             width: 100%;
             height: 100%;
             border-radius: 50%;
@@ -44,10 +45,47 @@
 
     }
 
-    hr{
+    hr {
         width: 100%;
         background-color: var(--primary);
         height: 2px;
     }
+
+}
+
+
+@media screen and (min-width: 992px) {
+
+    .place {
+        width: 350px;
+        height: 450px;
+        justify-content: space-between;
+
+        .reason {
+            font-size: 28px;
+        }
+
+        .time {
+            font-size: 18px;
+            color: #000;
+        }
+
+        .name {
+            font-size: 20px;
+        }
+
+        .address {
+            font-size: 16px;
+        }
+
+        .imgContainer {
+            width: 200px;
+            height: 200px;          
+
+        }
+        
+
+    }
+
 
 }
