--- a/src/pages/slide-show/SlideShow.module.scss
+++ b/src/pages/slide-show/SlideShow.module.scss
@@ -3,10 +3,12 @@
     margin-top: 48px;
     margin-bottom: 48px;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    gap: 16px;  
+    gap: 16px;
 
     .slideContainer {
+        width: 100%;
         height: 300px;
 
         .swiper {
@@ -25,5 +27,56 @@
 
     }
 
+
+}
+
+@media screen and (min-width: 768px) {
+
+    .main{
+
+        .slideContainer{
+            width: 90%;            
+        }
+
+    }
+
+}
+
+
+@media screen and (min-width: 768px) {
+
+    .main{
+
+        .slideContainer{
+            width: 70%;
+            height: 350px;
+        }
+
+    }
+
+}
+
+@media screen and (min-width: 992px) {
+
+    .main{
+
+        .slideContainer{
+            width: 50%;
+        }
+
+    }
+
+}
+
+@media screen and (min-width: 992px) {
+
+    .main{
+
+        .slideContainer{
+            width: 60%;
+            height: 450px;
+        }
+
+    }
 
 }
