--- a/src/pages/summary/Summary.module.scss
+++ b/src/pages/summary/Summary.module.scss
@@ -3,17 +3,14 @@
 
     .separator {
         width: 100%;
-        height: 200px;
-        background: var(--color2);
-        position: relative;
+       height: 200px;
+        background: var(--color2);        
+        display: flex;
+        justify-content: center;
+        padding-top: 16px;
 
-        .hello {
-            position: absolute;
-            color: #fff;
-            top: 58px;
-            left: 41%;
-            right: 50%;
-            transform: translate(-50%, -50%);
+        .hello {            
+            color: #fff;                        
             text-shadow: 5px 2px 3px var(--color1);
             font-size: 54px;
         }
@@ -26,10 +23,10 @@
 
         .avatar {
 
-            width: 65%;
+            width: 55%;
             height: 200px;
             position: absolute;
-            top: 20px;
+            top: 0;
             left: 50%;
             right: 50%;
             transform: translate(-50%, -50%);
@@ -55,4 +52,104 @@
 
     }
 
+}
+
+@media screen and (min-width: 576px) {
+
+    .summary{
+        .separator{
+
+            height: 220px;
+            
+            .hello{
+                font-size: 60px;
+            }
+        }
+        .content{
+            .avatar{
+                width: 45%;
+            }
+
+            .card{
+                margin-top: 150px;
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 768px) {
+
+    .summary{
+        .separator{
+
+            height: 250px;
+            
+            .hello{
+                font-size: 60px;
+            }
+        }
+        .content{
+            .avatar{
+                width: 250px;
+                height: 250px;
+            }
+
+            .card{
+                margin-top: 200px;
+            }
+        }
+    }
+    
+}
+
+
+@media screen and (min-width: 992px) {
+
+    .summary{
+        .separator{
+
+            height: 300px;
+            
+            .hello{
+                font-size: 70px;
+            }
+        }
+        .content{
+            .avatar{
+                width: 300px;
+                height: 300px;
+            }
+
+            .card{
+                margin-top: 200px;
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 1200px) {
+
+    .summary{
+        .separator{
+
+            height: 300px;
+            
+            .hello{
+                font-size: 80px;
+            }
+        }
+        .content{
+            .avatar{
+                width: 350px;
+                height: 350px;   
+            }
+
+            .card{
+                margin-top: 240px;
+            }
+        }
+    }
+    
 }
