--- a/src/pages/summary/components/card/Card.module.scss
+++ b/src/pages/summary/components/card/Card.module.scss
@@ -38,3 +38,56 @@
     }    
 
 }
+
+
+@media screen and (min-width: 768px) {
+
+    .card{
+        width: 60%;
+
+        .title {
+            font-size: 38px;
+        }
+    
+        .text {
+            font-size: 20px;
+        }    
+
+    }
+    
+}
+
+@media screen and (min-width: 1024px) {
+
+    .card{
+        width: 60%;
+
+        .title {
+            font-size: 40px;
+        }
+    
+        .text {
+            font-size: 22px;
+        }    
+
+    }
+    
+}
+
+
+@media screen and (min-width: 1200px) {
+
+    .card{
+        width: 750px;
+
+        .title {
+            font-size: 45px;
+        }
+    
+        .text {
+            font-size: 28px;
+        }    
+
+    }
+    
+}
