--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -8,10 +8,9 @@
 
     .audio{
         position: fixed;
-        bottom: 0;
-        left: 0;        
-        z-index: 999;
-        visibility: hidden;
+        bottom: 5px;
+        left: 5px;     
+        z-index: 999;        
     }
     
 }
