--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -1,16 +1,83 @@
-.layout{
+.layout {
 
-    .content{
+    .content {
         display: flex;
         flex-direction: column;
         gap: 16px;
     }
 
-    .audio{
-        position: fixed;
-        bottom: 5px;
-        left: 5px;     
-        z-index: 999;        
+    .audio {
+        position: absolute;
+        visibility: hidden;
     }
-    
+
+}
+
+.open {
+
+    width: 100vw !important;
+    height: 100vh !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .img {
+        width: 250px;
+        height: 250px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border-radius: 50%;
+        animation: logoAnimated 3s linear infinite;
+        position: relative;
+
+        .hand{
+            position: absolute;
+            top: 40px;
+            right: 10px;
+            animation: hand 1s linear infinite;
+            
+            *{
+                font-size: 40px;
+            }
+
+            @keyframes hand {
+                0% {
+                    transform: scale(1)
+                }
+        
+                50% {
+                    transform: scale(0.9)
+                }
+        
+                100% {
+                    transform: scale(1)
+                }
+            }
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+
+        &:hover{
+            cursor: pointer;
+        }
+
+    }
+
+    @keyframes logoAnimated {
+        0% {
+            transform: scale(0.9)
+        }
+
+        50% {
+            transform: scale(1)
+        }
+
+        100% {
+            transform: scale(0.9)
+        }
+    }
+
+
 }
