--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    background-image: url('/src/assets/img/background.jpg');
+    background-image: url('/src/assets/img/background.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
