--- a/src/pages/summary/Summary.module.scss
+++ b/src/pages/summary/Summary.module.scss
@@ -23,7 +23,7 @@
 
         .avatar {
 
-            width: 55%;
+            width: 200px;
             height: 200px;
             position: absolute;
             top: 0;
