--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -45,7 +45,7 @@
 
             .letter {
                 font-size: 14px;
-                color: var(--secondary);
+                color: var(--primary);
                 font-weight: 500;
                 text-align: center;
             }
@@ -67,7 +67,7 @@
 
             .date {
                 font-size: 16px;
-                color: var(--color1);
+                color: var(--primary);
                 text-shadow: 3px 2px 5px rgba(255, 255, 255, 0.66);
                 letter-spacing: 3px;
                 text-align: center;
