--- a/src/components/modal-map/ModalMap.module.scss
+++ b/src/components/modal-map/ModalMap.module.scss
@@ -17,6 +17,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        border-radius: 4px;
 
         .header{
             width: 100%;
