--- a/src/components/separator-heart/SeparatorHeart.module.scss
+++ b/src/components/separator-heart/SeparatorHeart.module.scss
@@ -5,7 +5,7 @@
 
     hr {
         width: 100%;
-        background-color: var(--primary);
+        background-color: var(--color3);
         font-size: 2px;
     }
 
