--- a/src/pages/footer/Footer.module.scss
+++ b/src/pages/footer/Footer.module.scss
@@ -1,14 +1,16 @@
 .footer{
     width: 100%;
-    height: 100px;
+    height: auto;
     background-color: var(--color3);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 16px;
+    padding: 16px;
 
     .text{
-        font-size: 36px;
+        font-size: 24px;
         color: #fff;
         text-shadow: 5px 2px 3px var(--color1);
     }
@@ -17,7 +19,11 @@
 
         width: 100%;
         display: flex;
+        gap: 16px;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-around;   
+        
 
         .icons{
             display: flex;
@@ -38,4 +44,20 @@
 
     }    
 
+}
+
+@media (width >= 768px) {
+
+    .footer{
+
+        .text{
+            font-size: 36px;
+        }
+
+        .info{
+            flex-direction: row;
+        }
+
+    }
+    
 }
