--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -16,7 +16,7 @@
 .open {
 
     width: 100vw !important;
-    height: 100vh !important;
+    height: 100dvh !important;
     display: flex;
     justify-content: center;
     align-items: center;
