--- a/src/pages/dedications/components/special-dedication/SpecialDedication.module.scss
+++ b/src/pages/dedications/components/special-dedication/SpecialDedication.module.scss
@@ -1,6 +1,6 @@
 .modalContainer {
     width: 100vw;
-    height: 90vh;
+    height: 90dvh;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -11,7 +11,7 @@
 
     .specialContainer{
         width: 90vw;
-        height: 80vh;
+        height: 80dvh;
         background-color: #fff;
         padding: 16px;
         display: flex;
