--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,7 +1,7 @@
 .home {
 
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     background-image: url('/src/assets/img/background.jpeg');
     background-size: cover;
@@ -9,7 +9,7 @@
     background-position: center center;
 
     .content {
-        padding: 35px 16px 80px;
+        padding: 16px 16px 90px 16px;
         width: 100%;
         height: 100%;
         opacity: 1;
@@ -36,7 +36,7 @@
 
             .title {
                 font-size: 48px;
-                color: var(--secondary);
+                color: var(--color1);
                 font-weight: 400;
                 text-shadow: 3px 2px 5px rgba(0, 0, 0, 0.66);
                 text-align: center;
@@ -45,7 +45,7 @@
 
             .date {
                 font-size: 20px;
-                color: var(--secondary);
+                color: var(--color1);
                 text-shadow: 3px 2px 5px rgba(255, 255, 255, 0.66);
                 letter-spacing: 3px;
                 text-align: center;
@@ -53,7 +53,7 @@
 
             .letter {
                 font-size: 18px;
-                color: var(--secondary);
+                color: var(--color1);
                 font-weight: 500;
                 text-align: center;
             }
@@ -80,7 +80,7 @@
             }
 
             .name{
-                color: var(--color2);
+                color: var(--color1);
                 font-family: 'Dancing Script', cursive;
                 font-size: 45px;
                 width: 100%;
