--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -3,19 +3,16 @@
     width: 100%;
 
     .ocean {
-        height: 80px;
-        /* change the height of the waves here */
+        height: 60px; /* change the height of the waves here */
         width: 100%;
         position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
         overflow-x: hidden;
-        display: flex;
-        justify-content: center;
 
         .wave {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%232e8b57" fill-opacity="1" d="M0,192L40,170.7C80,149,160,107,240,85.3C320,64,400,64,480,96C560,128,640,192,720,202.7C800,213,880,171,960,144C1040,117,1120,107,1200,112C1280,117,1360,139,1400,149.3L1440,160L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23bf6f8b" fill-opacity="1" d="M0,64L30,53.3C60,43,120,21,180,26.7C240,32,300,64,360,74.7C420,85,480,75,540,69.3C600,64,660,64,720,74.7C780,85,840,107,900,138.7C960,171,1020,213,1080,197.3C1140,181,1200,107,1260,74.7C1320,43,1380,53,1410,58.7L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>');
             position: absolute;
             width: 200%;
             height: 100%;
@@ -80,10 +77,11 @@
 
     .countdown {
         .ocean {
-            height: 120px;
+           
+            height: 80px;
 
             .time {
-                width: 75%;
+                width: 100%;
 
                 .item {
                     * {
