--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -3,7 +3,8 @@
     width: 100%;
 
     .ocean {
-        height: 60px; /* change the height of the waves here */
+        height: 60px;
+        /* change the height of the waves here */
         width: 100%;
         position: absolute;
         bottom: 0;
@@ -12,7 +13,7 @@
         overflow-x: hidden;
 
         .wave {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23bf6f8b" fill-opacity="1" d="M0,64L30,53.3C60,43,120,21,180,26.7C240,32,300,64,360,74.7C420,85,480,75,540,69.3C600,64,660,64,720,74.7C780,85,840,107,900,138.7C960,171,1020,213,1080,197.3C1140,181,1200,107,1260,74.7C1320,43,1380,53,1410,58.7L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%236f4ce4" fill-opacity="1" d="M0,64L80,58.7C160,53,320,43,480,42.7C640,43,800,53,960,58.7C1120,64,1280,64,1360,64L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>');
             position: absolute;
             width: 200%;
             height: 100%;
@@ -77,7 +78,7 @@
 
     .countdown {
         .ocean {
-           
+
             height: 80px;
 
             .time {
