--- a/src/pages/summary/Summary.module.scss
+++ b/src/pages/summary/Summary.module.scss
@@ -27,10 +27,9 @@
             font-size: 20px;
             display: flex;
             justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
+            align-items: center;           
+            width: 80px;
+            padding: 8px 16px;
             box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 
             * {
