--- a/src/pages/places/components/place-item/PlaceItem.module.scss
+++ b/src/pages/places/components/place-item/PlaceItem.module.scss
@@ -45,6 +45,11 @@
 
     }
 
+    .button{
+        color: var(--color1);
+        border: 1px solid var(--color2);
+    }
+
     hr {
         width: 100%;
         background-color: var(--primary);
