--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
 
     .ocean {
-        height: 60px;
+        height: 120px;
         /* change the height of the waves here */
         width: 100%;
         position: absolute;
@@ -13,7 +13,7 @@
         overflow-x: hidden;
 
         .wave {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%236f4ce4" fill-opacity="1" d="M0,64L80,58.7C160,53,320,43,480,42.7C640,43,800,53,960,58.7C1120,64,1280,64,1360,64L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%236f4ce4" fill-opacity="1" d="M0,128L40,144C80,160,160,192,240,218.7C320,245,400,267,480,256C560,245,640,203,720,202.7C800,203,880,245,960,229.3C1040,213,1120,139,1200,112C1280,85,1360,107,1400,117.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>');
             position: absolute;
             width: 200%;
             height: 100%;
@@ -78,8 +78,6 @@
 
     .countdown {
         .ocean {
-
-            height: 80px;
 
             .time {
                 width: 100%;
