change home and photo

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -199,7 +199,8 @@
     .home {
         .content {
 
-            height: 90%;
+            justify-content: center;
+            align-items: center;
 
             .grid {
 
