--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -200,6 +200,8 @@
         .content {
 
             height: 90%;
+            justify-content: center;
+            align-items: center;
 
             .grid {
 
