--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -199,8 +199,10 @@
     .home {
         .content {
 
-            justify-content: center;
+            height: 100%;
+            justify-content: space-around;
             align-items: center;
+            padding-top: 36px;
 
             .grid {
 
