--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -1,5 +1,8 @@
 .layout {
 
+    width: 100%;
+    background: #fff;
+
     .content {
         display: flex;
         flex-direction: column;
@@ -28,14 +31,15 @@
         border-radius: 50%;
         animation: logoAnimated 3s linear infinite;
         position: relative;
+        background-color: #fff;
 
-        .hand{
+        .hand {
             position: absolute;
             top: 40px;
             right: 10px;
             animation: hand 1s linear infinite;
-            
-            *{
+
+            * {
                 font-size: 40px;
             }
 
@@ -43,11 +47,11 @@
                 0% {
                     transform: scale(1)
                 }
-        
+
                 50% {
                     transform: scale(0.9)
                 }
-        
+
                 100% {
                     transform: scale(1)
                 }
@@ -59,7 +63,7 @@
             height: 100%;
         }
 
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
 
@@ -79,5 +83,16 @@
         }
     }
 
+
+}
+
+@media (width >=992px) {
+
+    .layout {
+        margin-left: auto;
+        margin-right: auto;
+        width: 75%;
+        max-width: 450px;        
+    }
 
 }
