--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,233 +1,65 @@
-.home {
-
-    width: 100%;
+.home {    
     height: 100dvh;
     display: flex;
-    background-image: url('/src/assets/img/background.jpeg');
+    flex-direction: column;
+    padding: 16px 40px;
+    text-align: center;
+    justify-content: center;
+    gap: 16px;
+    background-image: url('/src/assets/img/background.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 
-    .content {
-        padding: 16px 16px 90px 16px;
-        width: 100%;
-        height: 100%;
-        opacity: 1;
-        position: absolute;
+
+    .container {
+
+        flex: 1;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
         gap: 16px;
+        justify-content: center;
 
-        .grid {
-
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-
-            .item {
-                flex: 1;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                gap: 16px;
-            }
-
-            .title {
-                font-size: 40px;
-                color: var(--color1);
-                font-weight: 400;
-                text-shadow: 3px 2px 5px rgba(0, 0, 0, 0.66);
-                text-align: center;
-                letter-spacing: 4px;
-            }
-
-            .date {
-                font-size: 22px;
-                color: var(--color1);
-                text-shadow: 3px 2px 5px rgba(255, 255, 255, 0.66);
-                letter-spacing: 3px;
-                text-align: center;
-            }
-
-            .letter {
-                font-size: 16px;
-                color: var(--color1);
-                font-weight: 500;
-                text-align: center;
-            }
-
-            .img {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-            }
-
-            hr {
-                width: 100%;
-                background-color: var(--color3);
-
-            }
-
-            .name {
-                color: var(--color1);
-                font-family: 'Dancing Script', cursive;
-                font-size: 45px;
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                text-align: center;
-            }
-
+        .introduction {
+            font-size: 18px;
+            color: var(--secondary);
         }
 
-
-        .button {
-            background: var(--primary);
-            color: #fff;
-            text-transform: none;
-            font-weight: 400;
-            font-size: 20px;
-            padding: 8px 16px;
-            border-radius: 28px;
-            width: 160px;
-            height: 40px;
-
-            &:hover {
-                background: var(--secondary);
-            }
-
+        .title {
+            font-size: 34px;
+            color: var(--secondary);
         }
 
+        .name {
+            font-size: 58px;
+            color: var(--primary);
+            font-family: Dancing Script, cursive;
+        }
 
-    }
+        .summary {
+            margin: 16px 0px;
+            font-size: 14px;
+            color: var(--primary);
+        }
 
+        .await {
+            font-size: 28px;
+            font-weight: bold;
+            color: var(--primary);
+        }
 
-}
-
-.home::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background: rgb(255 255 255 / 60%);
-}
-
-@media screen and (min-width: 576px) {
-
-    .home {
-        .content {
-
-            .grid {
-
-                .date {
-                    font-size: 24px;
-                }
-
-                .letter {
-                    font-size: 18px;
-                }
-
-
-                .name {
-                    width: 100%;
-                    display: flex;
-                    justify-content: center;
-                }
-
-
-            }
-
+        .photo {
+            margin-left: auto;
+            margin-right: auto;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
         }
     }
 
-}
-
-
-
-
-
-@media screen and (min-width: 992px) {
-
-    .home {
-        .content {
-
-            padding: 100px 16px;
-
-            .grid {
-
-                flex-direction: row;
-
-                .item {
-                    flex: 0.5;
-                    gap: 36px;
-                }
-
-                .title {
-                    font-size: 48px;
-                    text-align: left;
-                }
-
-                .date {
-                    font-size: 26px;
-                    text-align: right;
-                }
-
-                .letter {
-                    font-size: 20px;
-                }
-
-                .name {
-                    font-size: 70px;
-                }
-
-            }
-
-        }
+    .footer {
+        height: 45px;
     }
 
-}
-
-
-
-@media screen and (min-width: 1200px) {
-
-    .home {
-        .content {
-
-            height: 100%;
-            padding-top: 36px;
-            justify-content: space-around;
-            align-items: center;
-
-            .grid {
-
-                .title {
-                    font-size: 58px;
-                    text-align: left;
-                }
-
-                .date {
-                    font-size: 28px;
-                    text-align: right;
-                }
-
-                .letter {
-                    font-size: 22px;
-                }
-
-                .name {
-                    font-size: 80px;
-                }
-
-
-            }
-
-        }
-    }
 
 }
