--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -1,97 +1,20 @@
 .countdown {
 
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
 
-    .ocean {
-        height: 120px;
-        /* change the height of the waves here */
+    .item {
         width: 100%;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
 
-        .wave {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%236f4ce4" fill-opacity="1" d="M0,128L40,144C80,160,160,192,240,218.7C320,245,400,267,480,256C560,245,640,203,720,202.7C800,203,880,245,960,229.3C1040,213,1120,139,1200,112C1280,85,1360,107,1400,117.3L1440,128L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>');
-            position: absolute;
-            width: 200%;
-            height: 100%;
-            animation: wave 10s linear infinite;
-            transform: translate3d(0, 0, 0);
-            opacity: 0.5;
+        * {
+            color: var(--primary);
         }
-
-        .wave:nth-of-type(2) {
-            bottom: 0;
-            animation: wave 8s linear reverse infinite;
-            opacity: 0.8;
-        }
-
-        .wave:nth-of-type(3) {
-            bottom: 0;
-            animation: wave 6s -1s linear infinite;
-            opacity: 0.3;
-        }
-
-        @keyframes wave {
-            0% {
-                transform: translateX(-15%);
-            }
-
-            50% {
-                transform: translateX(0%);
-            }
-
-            100% {
-                transform: translateX(-15%);
-            }
-        }
-
-        .time {
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            text-align: center;
-            color: #fff;
-            position: absolute;
-            bottom: 0;
-
-            .item {
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-            }
-
-
-
-        }
-
-
     }
 
-
-}
-
-@media screen and (min-width: 992px) {
-
-    .countdown {
-        .ocean {
-
-            .time {
-                width: 100%;
-
-                .item {
-                    * {
-                        font-size: 18px;
-                    }
-                }
-
-            }
-
-        }
-
-    }
 
 }
