--- a/src/pages/summary/components/card/Card.module.scss
+++ b/src/pages/summary/components/card/Card.module.scss
@@ -1,5 +1,5 @@
 .card {
-    width: 75%;
+    width: 100%;
     height: auto;
     padding: 16px;
     border-radius: 4px;
@@ -11,6 +11,7 @@
     justify-content: center;
     gap: 16px;
     border-radius: 4px;
+    margin: 48px 0px;
 
     @keyframes card {
         0% {
@@ -37,57 +38,4 @@
         text-align: center;
     }    
 
-}
-
-
-@media screen and (min-width: 768px) {
-
-    .card{
-        width: 60%;
-
-        .title {
-            font-size: 38px;
-        }
-    
-        .text {
-            font-size: 20px;
-        }    
-
-    }
-    
-}
-
-@media screen and (min-width: 1024px) {
-
-    .card{
-        width: 60%;
-
-        .title {
-            font-size: 40px;
-        }
-    
-        .text {
-            font-size: 22px;
-        }    
-
-    }
-    
-}
-
-
-@media screen and (min-width: 1200px) {
-
-    .card{
-        width: 750px;
-
-        .title {
-            font-size: 45px;
-        }
-    
-        .text {
-            font-size: 28px;
-        }    
-
-    }
-    
 }
