--- a/src/layout/MainLayout.module.scss
+++ b/src/layout/MainLayout.module.scss
@@ -2,6 +2,7 @@
 
     width: 100%;
     background: #fff;
+    position: relative;
 
     .content {
         display: flex;
@@ -12,6 +13,14 @@
     .audio {
         position: absolute;
         visibility: hidden;
+    }
+
+    .fab{
+        position: fixed;
+        bottom: 16px;
+        right: 16px;
+        background-color: var(--accent);
+        color: #fff;
     }
 
 }
