--- a/src/pages/footer/Footer.module.scss
+++ b/src/pages/footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     height: auto;
-    background-color: var(--color3);
+    background-color: var(--background-alt);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,7 +12,7 @@
     .text{
         font-size: 24px;
         color: #fff;
-        text-shadow: 5px 2px 3px var(--color1);
+        text-shadow: 5px 2px 3px var(--secondary);
     }
 
     .info{
@@ -38,7 +38,7 @@
         }
 
         .name{
-            color: var(--color1);       
+            color: var(--primary);       
             font-size: 18px;   
         }
 
