--- a/src/pages/home/components/countdown/CountdownCustom.module.scss
+++ b/src/pages/home/components/countdown/CountdownCustom.module.scss
@@ -9,9 +9,10 @@
     .item {
         width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: column;        
 
         * {
+            font-size: 20px;
             color: var(--primary);
         }
     }
